--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,6 @@
  *
  *= require_self
  *= require_tree .
- *= require_tree ../../../vendor/assets/stylesheets
+ *= require_tree ../../../vendor/assets/
 
  */
