--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -18,7 +18,7 @@ header {
   .shadow-container {
     width:100%;
     height:5px;
-    @include box-shadow(0 0px 10px #fff);
+    @include box-shadow(0 0px 10px #999);
   }
   .container {
     margin:auto;
