--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -5,4 +5,6 @@ header
         ul
           li
             =link_to "Home", root_path
+          li
+            = link_to "Log Out", '/logout', :method => :delete
   .shadow-container
