--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -9,6 +9,14 @@ body {
   font-family:"Helvetica Neue", Helvetica, Arial;
 }
 
+.flash-message {
+  width:300px;
+  margin-left:-150px;
+  position:fixed;
+  left:50%;
+  @include box-shadow(0px 2px 5px #999)
+}
+
 header {
   background-image:url('textures/debut_dark.png');
   height:45px;
