--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -5,6 +5,10 @@ header
         ul
           li
             =link_to "Home", root_path
+
+      .menu
+        ul
           li
-            = link_to "Log Out", '/logout', :method => :delete
+            - if 1==1 #user_signed_in?
+              = link_to "Log Out", '/logout', :method => :delete
   .shadow-container
