--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -14,7 +14,18 @@ body {
   margin-left:-150px;
   position:fixed;
   left:50%;
-  @include box-shadow(0px 2px 5px #999)
+  @include box-shadow(0px 2px 5px #999);
+  &.notice {
+    background-color:$green-alert-background;
+    color:$green-alert;
+    border:1px solid $green-alert;
+    padding:3px;
+  }
+  &.alert {
+    border:1px solid #c09853;
+    @include border-radius(0);
+    padding:3px;
+  }
 }
 
 header {
