--- a/app/assets/stylesheets/blog_var.css.scss
+++ b/app/assets/stylesheets/blog_var.css.scss
@@ -1,3 +1,10 @@
 $green-alert:#468847;
 $green-alert-background:#dff0d8 !important;
 $green:#3fa757;
+
+$grey:#3b3b3b;
+$grey-dark:#999999;
+$grey-dark2:#313131;
+$grey-dark3:#262626;
+
+$blue:#017ddd;
