fix flash messages

--- a/app/assets/stylesheets/blog_var.css.scss
+++ b/app/assets/stylesheets/blog_var.css.scss
@@ -2,6 +2,7 @@ $green-alert:#468847;
 $green-alert-background:#dff0d8 !important;
 $green:#3fa757;
 
+$grey-light:#dfdfdf;
 $grey:#3b3b3b;
 $grey-dark:#999999;
 $grey-dark2:#313131;
