--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -25,23 +25,12 @@ a {
   }
 }
 
-.flash-message {
+.alert {
   width:300px;
   margin-left:-150px;
   position:fixed;
   left:50%;
   @include box-shadow(0px 2px 5px #999);
-  &.notice {
-    background-color:$green-alert-background;
-    color:$green-alert;
-    border:1px solid $green-alert;
-    padding:3px;
-  }
-  &.alert {
-    border:1px solid #c09853;
-    @include border-radius(0);
-    padding:3px;
-  }
 }
 
 header {
@@ -59,6 +48,20 @@ header {
     margin:auto;
     padding:20px 0 5px 0;
     position:relative;
+    .title {
+      position:absolute;
+      left:50%;
+      top:15px;
+      width:200px;
+      margin-left:-100px;
+      font-size:24px;
+      font-weight:600;
+      text-align:center;
+      a, a:visited {
+        color:$grey-light;
+        &:hover { color:#fff; }
+      }
+    }
     nav {
       ul {
         list-style:none;
